--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 		<div class="challange">
 			<a href="./05 - Flex Panel Gallery/index-START.html">05 - Flex Panel Gallery</a>
 		</div>
+		<div class="challange">
+			<a href="./06 - Type Ahead/index-START.html">06 - Type Ahead</a>
+		</div>
 	</div>
 </body>
 </html>
