Challenge for day 7, practicing some js array functions.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 		<div class="challange">
 			<a href="./06 - Type Ahead/index-START.html">06 - Type Ahead</a>
 		</div>
+		<div class="challange">
+			<a href="./07 - Array Cardio Day 2/index-START.html">07 - Array Cardio Day 2</a>
+		</div>
 	</div>
 </body>
 </html>
