--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 		<div class="challange">
 			<a href="./07 - Array Cardio Day 2/index-START.html">07 - Array Cardio Day 2</a>
 		</div>
+		<div class="challange">
+			<a href="./08 - Fun with HTML5 Canvas/index-START.html">08 - Fun with HTML5 Canvas</a>
+		</div>
 	</div>
 </body>
 </html>
