--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 		<div class="challange">
 			<a href="./08 - Fun with HTML5 Canvas/index-START.html">08 - Fun with HTML5 Canvas</a>
 		</div>
+		<div class="challange">
+			<a href="./09 - Dev Tools Domination/index-START.html">09 - Dev Tools Domination</a>
+		</div>
+		<!-- 
+		<div class="challange">
+			<a href=".//index-START.html"></a>
+		</div>
+		 -->
 	</div>
 </body>
 </html>
