--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		<div class="challange">
 			<a href="./09 - Dev Tools Domination/index-START.html">09 - Dev Tools Domination</a>
 		</div>
+		<div class="challange">
+			<a href="./10 - Hold Shift and Check Checkboxes/index-START.html">10 - Hold Shift and Check Checkboxes</a>
+		</div>
 		<!-- 
 		<div class="challange">
 			<a href=".//index-START.html"></a>
