Added awesome video challenge for day 11. Todo: add full screen button and draggable speed and volume ranges.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 		<div class="challange">
 			<a href="./10 - Hold Shift and Check Checkboxes/index-START.html">10 - Hold Shift and Check Checkboxes</a>
 		</div>
+		<div class="challange">
+			<a href="./11 - Custom Video Player/index-START.html">11 - Custom Video Player</a>
+		</div>
 		<!-- 
 		<div class="challange">
 			<a href=".//index-START.html"></a>
