Adde challenge for day 12. Key sequence detection.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 		<div class="challange">
 			<a href="./11 - Custom Video Player/index-START.html">11 - Custom Video Player</a>
 		</div>
+		<div class="challange">
+			<a href="./12 - Key Sequence Detection/index-START.html">12 - Key Sequence Detection</a>
+		</div>
 		<!-- 
 		<div class="challange">
 			<a href=".//index-START.html"></a>
