Added challenge for day 13 - using debounce function.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 		<div class="challange">
 			<a href="./12 - Key Sequence Detection/index-START.html">12 - Key Sequence Detection</a>
 		</div>
+		<div class="challange">
+			<a href="./13 - Slide in on Scroll/index-START.html">13 - Slide in on Scroll</a>
+		</div>
 		<!-- 
 		<div class="challange">
 			<a href=".//index-START.html"></a>
