Added starter files for day 14 challenge. Fixed urls in readme file

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 		<div class="challange">
 			<a href="./13 - Slide in on Scroll/index-START.html">13 - Slide in on Scroll</a>
 		</div>
+		<div class="challange">
+			<a href="./14 - JavaScript References VS Copying/index-START.html">14 - JavaScript References VS Copying</a>
+		</div>
 		<!-- 
 		<div class="challange">
 			<a href=".//index-START.html"></a>
