Added challenge dat 15.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 		<div class="challange">
 			<a href="./14 - JavaScript References VS Copying/index-START.html">14 - JavaScript References VS Copying</a>
 		</div>
+		<div class="challange">
+			<a href="./15 - LocalStorage/index-START.html">15 - LocalStorage</a>
+		</div>
 		<!-- 
 		<div class="challange">
 			<a href=".//index-START.html"></a>
