--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 		<div class="challange">
 			<a href="./15 - LocalStorage/index-START.html">15 - LocalStorage</a>
 		</div>
+		<div class="challange">
+			<a href="./16 - Mouse Move Shadow/index-START.html">16 - Mouse Move Shadow</a>
+		</div>
 		<!-- 
 		<div class="challange">
 			<a href=".//index-START.html"></a>
