Challenge from day 17, nice regex.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 		<div class="challange">
 			<a href="./16 - Mouse Move Shadow/index-START.html">16 - Mouse Move Shadow</a>
 		</div>
+		<div class="challange">
+			<a href="./17 - Sort Without Articles/index-START.html">17 - Sort Without Articles</a>
+		</div>
 		<!-- 
 		<div class="challange">
 			<a href=".//index-START.html"></a>
