Reduce challenge for day 18.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 		<div class="challange">
 			<a href="./17 - Sort Without Articles/index-START.html">17 - Sort Without Articles</a>
 		</div>
+		<div class="challange">
+			<a href="./18 - Adding Up Times with Reduce/index-START.html">18 - Adding Up Times with Reduce</a>
+		</div>
 		<!-- 
 		<div class="challange">
 			<a href=".//index-START.html"></a>
