Started web cam challenge for day 19.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 		<div class="challange">
 			<a href="./18 - Adding Up Times with Reduce/index-START.html">18 - Adding Up Times with Reduce</a>
 		</div>
+		<div class="challange">
+			<a href="./19 - Webcam Fun/index-START.html">19 - Webcam Fun</a>
+		</div>
 		<!-- 
 		<div class="challange">
 			<a href=".//index-START.html"></a>
