Added starter files for day 22.

--- a/20 - Speech Detection/index-START.html
+++ b/20 - Speech Detection/index-START.html
@@ -47,14 +47,15 @@
         newColour = transc.replace(' ', '').toLocaleLowerCase();
       }
 
-      console.log(newColour, transc);
       if(changeColour && newColour !== ''){
         document.querySelector('body').style.backgroundColor = newColour;
         newColour = '';
         changeColour = false;
       }
-      
+
     }
+    
+    console.log(transc);
 
   });
 
