--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 		<div class="challange">
 			<a href="./20 - Speech Detection/index-START.html">20 - Speech Detection</a>
 		</div>
+		<div class="challange">
+			<a href="./22 - Follow Along Link Highlighter/index-START.html">22 - Follow Along Link Highlighter</a>
+		</div>
 		<!-- 
 		<div class="challange">
 			<a href=".//index-START.html"></a>
