Added code for challenge from day 23 - Speech synthesis .

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 		<div class="challange">
 			<a href="./22 - Follow Along Link Highlighter/index-START.html">22 - Follow Along Link Highlighter</a>
 		</div>
+		<div class="challenge">
+			<a href="./23 - Speech Synthesis/index-START.html">23 - Speech Synthesis</a>
+		</div>
 		<!-- 
 		<div class="challenge">
 			<a href=".//index-START.html"></a>
