Added challenge for day 24, sweet stickiy nav, upon scroll.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 		<div class="challenge">
 			<a href="./23 - Speech Synthesis/index-START.html">23 - Speech Synthesis</a>
 		</div>
+		<div class="challenge">
+			<a href="./24 - Sticky Nav/index-START.html">24 - Sticky Nav</a>
+		</div>
 		<!-- 
 		<div class="challenge">
 			<a href=".//index-START.html"></a>
