--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
 		<div class="challenge">
 			<a href="./25 - Event Capture, Propagation, Bubbling and Once/index-START.html">25 - Event Capture, Propagation, Bubbling and Once</a>
 		</div>
+		<div class="challenge">
+			<a href="./26 - Stripe Follow Along Nav/index-START.html">26 - Stripe Follow Along Nav</a>
+		</div>
 		<!-- 
 		<div class="challenge">
 			<a href=".//index-START.html"></a>
