Added starter files for day 27

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 		<div class="challenge">
 			<a href="./26 - Stripe Follow Along Nav/index-START.html">26 - Stripe Follow Along Nav</a>
 		</div>
+		<div class="challenge">
+			<a href="./27 - Click and Drag/index-START.html">27 - Click and Drag</a>
+		</div>
 		<!-- 
 		<div class="challenge">
 			<a href=".//index-START.html"></a>
