--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
 		<div class="challenge">
 			<a href="./27 - Click and Drag/index-START.html">27 - Click and Drag</a>
 		</div>
+		<div class="challenge">
+			<a href="./28 - Video Speed Controller/index-START.html">28 - Video Speed Controller</a>
+		</div>
 		<!-- 
 		<div class="challenge">
 			<a href=".//index-START.html"></a>
