Added starter files for day 29.

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
 		<div class="challenge">
 			<a href="./28 - Video Speed Controller/index-START.html">28 - Video Speed Controller</a>
 		</div>
+		<div class="challenge">
+			<a href="./29 - Countdown Timer/index-START.html">29 - Countdown Timer</a>
+		</div>
 		<!-- 
 		<div class="challenge">
 			<a href=".//index-START.html"></a>
