--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 		<div class="challenge">
 			<a href="./29 - Countdown Timer/index-START.html">29 - Countdown Timer</a>
 		</div>
+		<div class="challenge">
+			<a href="./30 - Whack A Mole/index-START.html">30 - Whack A Mole</a>
+		</div>
 		<!-- 
 		<div class="challenge">
 			<a href=".//index-START.html"></a>
